--- a/siteJumia.html
+++ b/siteJumia.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class="first_div">
-        <img class="image_en_tête" src="https://sn.jumia.is/cms/000000_2022/W27/FESTIVAL_ETE/STICKY/SN_W27_USER_BANNER_900x46_V2.jpg" alt="image d'en tête">
+        <img class="image_en_tête" src="https://sn.jumia.is/cms/000000_2022/BRAND_FESTIVAL/Sticky/SN_W34_BRAND_FESTIVAL_900x46.gif" alt="image d'en tête">
     </div>
     <div class="second_div">
         <div class="vendre">
@@ -30,52 +30,54 @@
             <input type="text" id="recherche" placeholder="Cherchez un produit, une marque ou une catégorie"></i>            
             <button>RECHERCHER</button>
         </div>
-        <div class="onglet">
-            <button onclick="maFonction1()" class="mybutton">
-                <i class="fa-solid fa-user"></i>&nbsp
-                Se connecter &nbsp<i class="fa-solid fa-angle-down"></i>
-            </button>
-            <div id="sous_menu1" class="sous_onglet">
-                <button>SE CONNECTER</button>
-                <a href="#"><i class="fa-solid fa-user"></i> &nbsp Votre compte</a>
-                <a href="#"><i class="fa-solid fa-store"></i>&nbsp Vos commandes</a>
-                <a href="#"><i class="fa-solid fa-heart"></i> &nbsp Votre liste d'envies</a>
+        <div class="onglets">
+            <div class="onglet">
+                <button onclick="maFonction1()" class="mybutton">
+                    <i class="fa-solid fa-user"></i>&nbsp
+                    <span> Se connecter </span>&nbsp<i class="fa-solid fa-angle-down"></i>
+                </button>
+                <div id="sous_menu1" class="sous_onglet">
+                    <button>SE CONNECTER</button>
+                    <a href="#"><i class="fa-solid fa-user"></i> &nbsp Votre compte</a>
+                    <a href="#"><i class="fa-solid fa-store"></i>&nbsp Vos commandes</a>
+                    <a href="#"><i class="fa-solid fa-heart"></i> &nbsp Votre liste d'envies</a>
+                </div>
             </div>
-        </div>
-        <div class="onglet">
-            <button onclick="maFonction2()" class="mybutton">
-                <i class="fa-solid fa-circle-question"></i>&nbsp
-                Aide &nbsp<i class="fa-solid fa-angle-down"></i>
-            </button>
-            <div id="sous_menu2" class="sous_onglet">
-                <a href="#">Centre d'assistance</a>
-                <a href="#">Passer et suivre ma commande</a>
-                <a href="#">Annuler ma commande</a>
-                <a href="#">Retour & Remboursement</a>
-                <a href="#">Paiement et compte Jumia</a>
-                <button>CHAT EN DIRECT</button>
+            <div class="onglet">
+                <button onclick="maFonction2()" class="mybutton">
+                    <i class="fa-solid fa-circle-question"></i>&nbsp
+                    <span> Aide </span>&nbsp<i class="fa-solid fa-angle-down"></i>
+                </button>
+                <div id="sous_menu2" class="sous_onglet">
+                    <a href="#">Centre d'assistance</a>
+                    <a href="#">Passer et suivre ma commande</a>
+                    <a href="#">Annuler ma commande</a>
+                    <a href="#">Retour & Remboursement</a>
+                    <a href="#">Paiement et compte Jumia</a>
+                    <button>CHAT EN DIRECT</button>
+                </div>
             </div>
-        </div>
-        <div class="onglet">
-            <button class="mybutton"><i class="fa-solid fa-cart-shopping"></i>&nbsp Panier</button>
+            <div class="onglet">
+                <button class="mybutton"><i class="fa-solid fa-cart-shopping"></i>&nbsp <span> Panier</span></button>
+            </div>
         </div>
     </nav>
 </header>
 <main>
     <div class="third_div">
         <div class="catégories">
-            <p><a href=""><i class="fa-solid fa-mobile-screen"></i> Téléphones & Tablettes</a></p>
-            <p><a href=""><i class="fa-solid fa-apple-whole"></i> Supermarché</a></p>
-            <p><a href=""><i class="fa-solid fa-temperature-arrow-up"></i> Santé & Beauté</a></p>
-            <p><a href=""><i class="fa-solid fa-tv"></i></i> Electronique</a></p>
-            <p><a href=""><i class="fa-solid fa-desktop"></i> Informatique</a></p>
-            <p><a href=""><i class="fa-solid fa-blender-phone"></i> Electroménager</a></p>
-            <p><a href=""><i class="fa-solid fa-house-chimney"></i> Maison et bureau</a></p>
-            <p><a href=""><i class="fa-solid fa-shirt"></i> Mode</a></p>
-            <p><a href=""><i class="fa-solid fa-baby"></i> Produits pour bébés</a></p>
-            <p><a href=""><i class="fa-solid fa-dumbbell"></i> Articles de sport</a></p>
-            <p><a href=""><i class="fa-solid fa-gamepad"></i> Jeu vidéos & Consoles</a></p>
-            <p><a href=""><i class="fa-solid fa-circle-info"></i></i> Autres catégories</a></p>
+            <p><a href=""><i class="fa-solid fa-mobile-screen"></i>&nbsp Téléphones & Tablettes</a></p>
+            <p><a href=""><i class="fa-solid fa-apple-whole"></i>&nbsp Supermarché</a></p>
+            <p><a href=""><i class="fa-solid fa-temperature-arrow-up"></i>&nbsp Santé & Beauté</a></p>
+            <p><a href=""><i class="fa-solid fa-tv"></i>&nbsp Electronique</a></p>
+            <p><a href=""><i class="fa-solid fa-desktop"></i>&nbsp Informatique</a></p>
+            <p><a href=""><i class="fa-solid fa-blender-phone"></i>&nbsp Electroménager</a></p>
+            <p><a href=""><i class="fa-solid fa-house-chimney"></i>&nbsp Maison et bureau</a></p>
+            <p><a href=""><i class="fa-solid fa-shirt"></i>&nbsp Mode</a></p>
+            <p><a href=""><i class="fa-solid fa-baby"></i>&nbsp Produits pour bébés</a></p>
+            <p><a href=""><i class="fa-solid fa-dumbbell"></i>&nbsp Articles de sport</a></p>
+            <p><a href=""><i class="fa-solid fa-gamepad"></i>&nbsp Jeu vidéos & Consoles</a></p>
+            <p><a href=""><i class="fa-solid fa-circle-info"></i>&nbsp Autres catégories</a></p>
         </div>
         <div class="slide1">
             <a href=""><img name="slide"></a>
@@ -108,18 +110,18 @@
         <i class="fa-solid fa-chevron-left"></i>
     </button>
     <div id="slide2_img">
-        <img src="images/img9.jpeg" alt="">
-        <img src="images/img10.jpg" alt="">
-        <img src="images/img11.jpg" alt="">
-        <img src="images/img12.jpg" alt="">
-        <img src="images/img13.jpeg" alt="">
-        <img src="images/img14.jpg" alt="">
-        <img src="images/img15.jpg" alt="">
-        <img src="images/img16.jpg" alt="">
-        <img src="images/img17.jpg" alt="">
-        <img src="images/img18.jpg" alt="">
-        <img src="images/img19.jpg" alt="">
-        <img src="images/img20.jpg" alt="">   
+        <a href=""><img src="images/img9.jpeg" alt=""></a>
+        <a href=""><img src="images/img10.jpg" alt=""></a>
+        <a href=""><img src="images/img11.jpg" alt=""></a>
+        <a href=""><img src="images/img12.jpg" alt=""></a>
+        <a href=""><img src="images/img13.jpeg" alt=""></a>
+        <a href=""><img src="images/img14.jpg" alt=""></a>
+        <a href=""><img src="images/img15.jpg" alt=""></a>
+        <a href=""><img src="images/img16.jpg" alt=""></a>
+        <a href=""><img src="images/img17.jpg" alt=""></a>
+        <a href=""><img src="images/img18.jpg" alt=""></a>
+        <a href=""><img src="images/img19.jpg" alt=""></a>
+        <a href=""><img src="images/img20.jpg" alt=""></a>  
     </div>
     <button type="button" class="btn_right" id="btn_right">
         <i class="fa-solid fa-chevron-right"></i>
