--- a/siteJumia.html
+++ b/siteJumia.html
@@ -24,6 +24,11 @@
         </div>
     </div>
     <nav>
+        <div onclick="afficher()" id="menu-burger">
+            <div class="burger"></div>
+            <div class="burger"></div>
+            <div class="burger"></div>
+        </div>
         <img class="logo_jumia" src="images/Jumia-Logo.png" alt="logo Jumia">
         <div class="barre_recherche">
             <i class="fa-solid fa-magnifying-glass">
@@ -65,7 +70,7 @@
 </header>
 <main>
     <div class="third_div">
-        <div class="catégories">
+        <div class="catégories" id="categories">
             <p><a href=""><i class="fa-solid fa-mobile-screen"></i>&nbsp Téléphones & Tablettes</a></p>
             <p><a href=""><i class="fa-solid fa-apple-whole"></i>&nbsp Supermarché</a></p>
             <p><a href=""><i class="fa-solid fa-temperature-arrow-up"></i>&nbsp Santé & Beauté</a></p>
